@@ -3,6 +3,7 @@
 	* src/groupadd.c, src/groupdel.c, src/groupmod.c: Re-indent.
 	* src/groupmod.c: Do not add the command synopsis to the main ()
 	documentation. This avoids outdated information.
+	* libmisc/chkname.c: Remove outdated comments.
 
 2008-12-22  Nicolas François  <nicolas.francois@centraliens.net>
 
